[package]
name = "packetrs"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Macro-based struct serialization/deserialization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packetrs-macro = { version = "=0.3.0", path = "macro" }
packetrs-impl = { version = "=0.4.0", path = "impl" }

[workspace]
members = [".", "impl", "macro"]
default-members = [".", "impl"]

