[package]
name = "packetrs-impl"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Macro-based struct serialization/deserialization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
b4 = { path = "../../rust/b4" }
proc-macro-crate = "1.1.3"
anyhow = "1.0.56"
paste = "1"
